--- a/training/258_cnn_tanh.ipynb
+++ b/training/258_cnn_tanh.ipynb
@@ -63,17 +63,6 @@
         "    # Pooling 2\n",
         "    model.add(MaxPooling2D(pool_size=pool_size))\n",
         "\n",
-        "    # Conv Layer 6\n",
-        "    model.add(Conv2D(128, (3, 3), padding='valid', strides=(1,1), activation = 'tanh', name = 'Conv6'))\n",
-        "    model.add(Dropout(0.2))\n",
-        "\n",
-        "    # Conv Layer 7\n",
-        "    model.add(Conv2D(128, (3, 3), padding='valid', strides=(1,1), activation = 'tanh', name = 'Conv7'))\n",
-        "    model.add(Dropout(0.2))\n",
-        "\n",
-        "    # Pooling 3\n",
-        "    model.add(MaxPooling2D(pool_size=pool_size))\n",
-        "\n",
         "    # Upsample 1\n",
         "    model.add(UpSampling2D(size=pool_size))\n",
         "\n",
@@ -115,141 +104,53 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lSX7agMGlM7m",
-        "outputId": "9337124a-c71d-4734-a8e1-393d1c25f5ea"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "41SSd0cybQtQ",
-        "outputId": "b5a9e497-994a-4903-9ddf-be0ea3f76dcb"
+        "outputId": "9baa604c-f423-444d-ffdb-d8ca318075d9"
       },
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
-          "name": "stderr",
           "text": [
-            "<ipython-input-6-b233a8dac2cf>:38: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "Epoch 1/10\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<ipython-input-3-dacb18d754c8>:38: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
             "  model.fit_generator(datagen.flow(X_train, y_train, batch_size=batch_size), steps_per_epoch=len(X_train)/batch_size,\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Epoch 1/6\n",
-            "89/89 [==============================] - 1423s 16s/step - loss: 0.0807 - val_loss: 0.0515\n",
-            "Epoch 2/6\n",
-            "89/89 [==============================] - 1426s 16s/step - loss: 0.0248 - val_loss: 0.0486\n",
-            "Epoch 3/6\n",
-            "89/89 [==============================] - 1425s 16s/step - loss: 0.0194 - val_loss: 0.0256\n",
-            "Epoch 4/6\n",
-            "89/89 [==============================] - 1422s 16s/step - loss: 0.0149 - val_loss: 0.0219\n",
-            "Epoch 5/6\n",
-            "89/89 [==============================] - 1426s 16s/step - loss: 0.0123 - val_loss: 0.0323\n",
-            "Epoch 6/6\n",
-            "89/89 [==============================] - 1449s 16s/step - loss: 0.0111 - val_loss: 0.0194\n",
-            "Model: \"sequential\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " batch_normalization (BatchN  (None, 80, 160, 3)       12        \n",
-            " ormalization)                                                   \n",
-            "                                                                 \n",
-            " Conv1 (Conv2D)              (None, 78, 158, 16)       448       \n",
-            "                                                                 \n",
-            " Conv2 (Conv2D)              (None, 76, 156, 32)       4640      \n",
-            "                                                                 \n",
-            " max_pooling2d (MaxPooling2D  (None, 38, 78, 32)       0         \n",
-            " )                                                               \n",
-            "                                                                 \n",
-            " Conv3 (Conv2D)              (None, 36, 76, 32)        9248      \n",
-            "                                                                 \n",
-            " dropout (Dropout)           (None, 36, 76, 32)        0         \n",
-            "                                                                 \n",
-            " Conv4 (Conv2D)              (None, 34, 74, 64)        18496     \n",
-            "                                                                 \n",
-            " dropout_1 (Dropout)         (None, 34, 74, 64)        0         \n",
-            "                                                                 \n",
-            " Conv5 (Conv2D)              (None, 32, 72, 64)        36928     \n",
-            "                                                                 \n",
-            " dropout_2 (Dropout)         (None, 32, 72, 64)        0         \n",
-            "                                                                 \n",
-            " max_pooling2d_1 (MaxPooling  (None, 16, 36, 64)       0         \n",
-            " 2D)                                                             \n",
-            "                                                                 \n",
-            " Conv6 (Conv2D)              (None, 14, 34, 128)       73856     \n",
-            "                                                                 \n",
-            " dropout_3 (Dropout)         (None, 14, 34, 128)       0         \n",
-            "                                                                 \n",
-            " Conv7 (Conv2D)              (None, 12, 32, 128)       147584    \n",
-            "                                                                 \n",
-            " dropout_4 (Dropout)         (None, 12, 32, 128)       0         \n",
-            "                                                                 \n",
-            " max_pooling2d_2 (MaxPooling  (None, 6, 16, 128)       0         \n",
-            " 2D)                                                             \n",
-            "                                                                 \n",
-            " up_sampling2d (UpSampling2D  (None, 12, 32, 128)      0         \n",
-            " )                                                               \n",
-            "                                                                 \n",
-            " Deconv1 (Conv2DTranspose)   (None, 14, 34, 64)        73792     \n",
-            "                                                                 \n",
-            " dropout_5 (Dropout)         (None, 14, 34, 64)        0         \n",
-            "                                                                 \n",
-            " Deconv2 (Conv2DTranspose)   (None, 16, 36, 64)        36928     \n",
-            "                                                                 \n",
-            " dropout_6 (Dropout)         (None, 16, 36, 64)        0         \n",
-            "                                                                 \n",
-            " up_sampling2d_1 (UpSampling  (None, 32, 72, 64)       0         \n",
-            " 2D)                                                             \n",
-            "                                                                 \n",
-            " Deconv3 (Conv2DTranspose)   (None, 34, 74, 32)        18464     \n",
-            "                                                                 \n",
-            " dropout_7 (Dropout)         (None, 34, 74, 32)        0         \n",
-            "                                                                 \n",
-            " Deconv4 (Conv2DTranspose)   (None, 36, 76, 32)        9248      \n",
-            "                                                                 \n",
-            " dropout_8 (Dropout)         (None, 36, 76, 32)        0         \n",
-            "                                                                 \n",
-            " Deconv5 (Conv2DTranspose)   (None, 38, 78, 16)        4624      \n",
-            "                                                                 \n",
-            " dropout_9 (Dropout)         (None, 38, 78, 16)        0         \n",
-            "                                                                 \n",
-            " up_sampling2d_2 (UpSampling  (None, 76, 156, 16)      0         \n",
-            " 2D)                                                             \n",
-            "                                                                 \n",
-            " Deconv6 (Conv2DTranspose)   (None, 78, 158, 16)       2320      \n",
-            "                                                                 \n",
-            " Final (Conv2DTranspose)     (None, 80, 160, 1)        145       \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 436,733\n",
-            "Trainable params: 0\n",
-            "Non-trainable params: 436,733\n",
-            "_________________________________________________________________\n"
+            "89/89 [==============================] - 1267s 14s/step - loss: 0.0223 - val_loss: 0.0338\n",
+            "Epoch 2/10\n",
+            "89/89 [==============================] - 1220s 14s/step - loss: 0.0070 - val_loss: 0.0181\n",
+            "Epoch 3/10\n",
+            "89/89 [==============================] - 1222s 14s/step - loss: 0.0052 - val_loss: 0.0075\n",
+            "Epoch 4/10\n",
+            "89/89 [==============================] - 1212s 14s/step - loss: 0.0042 - val_loss: 0.0060\n",
+            "Epoch 5/10\n",
+            "89/89 [==============================] - 1211s 13s/step - loss: 0.0030 - val_loss: 0.0033\n",
+            "Epoch 6/10\n",
+            "89/89 [==============================] - 1215s 14s/step - loss: 0.0023 - val_loss: 0.0026\n",
+            "Epoch 7/10\n",
+            "89/89 [==============================] - 1217s 14s/step - loss: 0.0016 - val_loss: 0.0017\n",
+            "Epoch 8/10\n",
+            "89/89 [==============================] - 1213s 14s/step - loss: 0.0013 - val_loss: 0.0010\n",
+            "Epoch 9/10\n",
+            "89/89 [==============================] - 1217s 14s/step - loss: 0.0011 - val_loss: 0.0012\n",
+            "Epoch 10/10\n",
+            "76/89 [========================>.....] - ETA: 3:00 - loss: 9.9385e-04"
           ]
         }
       ],
@@ -258,11 +159,11 @@
         "def main():\n",
         "    # Load training images\n",
         "    # train_images = pickle.load(open(\"/Users/divyamsobti10/Desktop/258/project/full_CNN_labels.p\", \"rb\" ))\n",
-        "    train_images = pickle.load(open(\"/content/drive/MyDrive/CMPE258/full_CNN_train.p\", \"rb\" ))\n",
+        "    train_images = pickle.load(open(\"/content/full_CNN_labels.p\", \"rb\" ))\n",
         "\n",
         "    # Load image labels\n",
         "    # labels = pickle.load(open(\"/Users/divyamsobti10/Desktop/258/project/full_CNN_labels.p\", \"rb\" ))\n",
-        "    labels = pickle.load(open(\"/content/drive/MyDrive/CMPE258/full_CNN_labels.p\", \"rb\" ))\n",
+        "    labels = pickle.load(open(\"/content/full_CNN_labels.p\", \"rb\" ))\n",
         "\n",
         "    # Make into arrays as the neural network wants these\n",
         "    train_images = np.array(train_images)\n",
